tests/routes/snapshots/integration_tests__routes__frontend__purchase_asset_invalid_asset.snap
---
source: tests/routes/frontend.rs
expression: constraint
---
Some(
    "owned_assets_asset_id_fkey",
)
